--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bch-message-lib": "2.2.1",
     "bch-token-sweep": "2.2.1",
     "bootstrap": "5.2.0",
-    "colab-coinjoin-api": "../colab-coinjoin-api/",
+    "colab-coinjoin-api": "2.1.0",
     "electron-is-dev": "2.0.0",
     "electron-squirrel-startup": "1.0.0",
     "qrcode.react": "3.1.0",
