--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Build/release
 
-on: push
+#on: push
+on:
+  pull_request_target:
+    types:
+      - closed
+# https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#running-your-workflow-when-a-pull-request-merges-1
 
 jobs:
   release:
