--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "5.2.0",
     "electron-is-dev": "2.0.0",
     "electron-squirrel-startup": "1.0.0",
+    "koa": "2.14.1",
     "qrcode.react": "3.1.0",
     "query-string": "7.1.1",
     "react": "18.2.0",
