--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-bch-coinjoin-wallet",
-  "version": "1.1.2",
+  "version": "1.4.0",
   "main": "public/electron.js",
   "description": "BCH wallet",
   "author": "Chris Troutner <chris.troutner@gmail.com>",
@@ -31,6 +31,9 @@
     "bootstrap": "5.2.0",
     "electron-is-dev": "2.0.0",
     "electron-squirrel-startup": "1.0.0",
+    "go-ipfs": "0.17.0",
+    "ipfs-http-client": "55.0.0",
+    "ipfsd-ctl": "10.0.6",
     "koa": "2.14.1",
     "qrcode.react": "3.1.0",
     "query-string": "7.1.1",
