feat(ipfs-coord): Adding ipfs-coord

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "6.1.2",
     "@fortawesome/free-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "@psf/bch-js": "6.5.7",
     "axios": "0.27.2",
     "bch-message-lib": "2.2.1",
     "bch-token-sweep": "2.2.1",
@@ -32,6 +33,7 @@
     "electron-is-dev": "2.0.0",
     "electron-squirrel-startup": "1.0.0",
     "go-ipfs": "0.17.0",
+    "ipfs-coord": "8.0.5",
     "ipfs-http-client": "55.0.0",
     "ipfsd-ctl": "10.0.6",
     "koa": "2.14.1",
